<resources>

    <string name="app_name">XLerate</string>
    <!--string name="spreadsheet_id">1vbsiBrDjmpR7G9Rnbfp9HVPkiOk0cDmdOrBuAi5i5ec</string-->
    <string name="spreadsheet_id">1vbsiBrDjmpR7G9Rnbfp9HVPkiOk0cDmdOrBuAi5i5ec</string>
    <string name="contact_spreadsheet_id">1DuoGOtjH7CREqTIaHiy1sNT480L6Y2uOLQj8L34D9E8</string>
    <string name="notification_spreadsheet_id">1jVxzX3l6-FGcI2GtXJ8fgtu-Ovx3RukN9LUvXij-zYY</string>
    <string name="msg_no_connection">No network connection available.</string>
    <string name="msg_reinstall_the_app">Please uninstall the app and install it again.</string>
    <string name="access_contacts">This app needs to access your Google account (via Contacts).</string>
    <string name="make_call">This app needs to make call.</string>
    <string name="no_result">No results returned.</string>
    <string name="request_cancelled">Request cancelled.</string>
    <string name="error_occurred">The following error occurred:</string>
    <string name="install_google_play">This app requires Google Play Services. Please install
        Google Play Services on your device and relaunch this app.</string>
    <string name="provide_correct_credentials">Please provide correct credentials</string>
    <string name="valid_url">Please enter valid URL</string>
    <string name="folder_name_empty">Folder name cant be empty</string>
    <string name="date">Date :&#160;</string>
    <string name="breakfast">Breakfast :&#160;</string>
    <string name="committee">%1$s :</string>
    <string name="lunch">Lunch :&#160;</string>
    <string name="snacks">Snacks :&#160;</string>
    <string name="dinner">Dinner :&#160;</string>
    <string name="previous">&lt; previous</string>
    <string name="next">next &gt;</string>
    <string name="menu">Log Out &gt;</string>
    <string name="menu1">Today &gt;</string>
    <string name="no_data_found">No data found for %1$s</string>
    <string name="notifications">Notifications</string>
    <string name="helpdesk">Helpdesk</string>
    <string name="xlri_mess_menu">Mess Menu</string>
    <string name="mess_menu">Mess Menu</string>
    <string name="my_schedule">My schedule</string>
    <string name="internet_complaints">Internet Complaints</string>
    <string name="laptop_issue_form">Laptop Issue Form</string>
    <string name="resources">Contact Book</string>
    <string name="select_hostel">Select hostel</string>
    <string name="laptop_issue_url">https://docs.google.com/forms/d/e/1FAIpQLSdXHlDoO-3l3E9CO0Ek3Z8RYV1g9PWuTDUDYKpTSKPJQ0mxIA/viewform?usp=sf_link</string>
    <string name="label_ais">AIS</string>
    <string name="label_change_server">Change server</string>
    <string name="label_my_schedule">My Schedule</string>
    <string name="label_grades">Grades</string>
    <string name="label_search">Search</string>
    <string name="label_course_schedule">Course Schedule</string>
    <string name="label_infracom_issues">Infracom Issues</string>
    <string name="label_charms">C.H.A.R.M.S</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_save">Save</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_edit">Edit</string>
    <string name="base_url">Base URL</string>
    <string name="base_folder">Base Folder</string>
    <string name="lbl_change_server">Change Server</string>
    <string name="lbl_announcements">Announcements</string>

    <string-array name="menu_options">
        <item>Old Hostel</item>
        <item>New Hostel</item>
        <item>GMP Hostel</item>
    </string-array>

</resources>
