<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/others">

        <Button
            android:id="@+id/button_my_schedule"
            android:text="@string/label_my_schedule"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/course"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_grades"
            android:text="@string/label_grades"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/grade"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <Button
        android:id="@+id/button_course_schedule"
        android:text="@string/label_course_schedule"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/mysch"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:textStyle="bold" />


    </LinearLayout>

</layout>