<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/others">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.myapplication.MessMenuActivity"
        >

        <Spinner
            android:id="@+id/spinner_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:entries="@array/menu_options"
            android:padding="10dp"
            android:prompt="@string/select_hostel" />


        <RelativeLayout
            android:id="@+id/rl_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/spinner_menu"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/background_data"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Day : "
                            android:textSize="20dp"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            tools:text="22/07/2017" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_breakfast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_date"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/breakfast"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_breakfast"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            tools:text=" gfasdhf" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_lunch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_breakfast"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="35dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lunch"
                            android:textSize="20dp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/tv_lunch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            tools:text=" gjasf" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_snacks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="35dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/snacks"
                            android:textSize="20dp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/tv_snacks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            tools:text=" sfhakjf" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_dinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="35dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dinner"
                            android:textSize="20dp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/tv_dinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            tools:text="gdshgkjsdgkdgl" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

            <TextView
                android:id="@+id/tv_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="20dp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="no data found" />

        </RelativeLayout>

        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_previous"
            android:layout_marginBottom="5dp"
            android:textSize="14dp"
            android:textStyle="italic"
            android:text="*Please contact Infracom for any discrepancies." />


        <Button
            android:id="@+id/button_previous"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/previous"
            android:textColor="@color/white"
            android:visibility="gone" />


        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@color/white"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="18sp"
            android:visibility="gone"
            tools:text="gdshgkjsdgkdgl" />

    </RelativeLayout>

</layout>